Added an inverted color for logo to show more

--- a/Lockdown/frmMain.resx
+++ b/Lockdown/frmMain.resx
@@ -121,55 +121,61 @@
   <data name="LogoImgBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IwAALiMBeKU/dgAAC05JREFUeF7t3WmsFXcZx3E0Rg0kjcY2bnHBRsWlxrqkMRoXBLQvABW3GH1h4gs1
-        SiJBpBVlRwP4wmg1Kmq1Rm3SRgNWMS5p0kVDXEBQo68KYXEBwSaC2Mj191wPkV6fXmbOmXnm+c98P8k3
-        DfTeM3Mu83/uPefOmTMHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAArbhKvUqtVJ9U
-        W9RG9UH1cvUEBaAHnq3erT6n7lR/VVMVso/7sfqiept6sgJQiMXqJ8pb3OP2I/V6BSCp69UPlbeAm8oG
-        wesUgCQWqr3KW7BtdYdaogB05Pnq+8pboFHZ4HmJAhDoHeofyluUXfQuBSDAx5W3CLtugwLQIvuVnrf4
-        svR5BaAFtytv0WXL9hNAQx6r7lLeYsua7e+VCsAEnqP+oLxFlr1fqvkKwBgern6jvMVVSr9Wj1AAavqK
-        8hZVaX1JAajhfcpbTKX2HgWggmuVt4hK74UKwGXY42ZvATXdCWWvGrT/ev+/6fYrALP4svIWTxPdpz6k
-        rlOPU5d6jLILgtiFQo4o7/ObyO4fAEdbj/uPqdWqjg+rtgbBexWASzxRnVXegpmkzWpcD1P2+d7tTtK/
-        FOcHAJf4jPIWyyTZdf6a8AHl3f4k3aQAyDOVt0jGzV4m/FbVpDer88rb3rgtUMDgfVV5C2Sc7HH7K1Ub
-        7ElCez7B2+442YlOwKBdo7zFMW6vVW16jfK2O27PU8Bg7VLewhinj6gI9hsFb/vjdLMCBukFylsU43Sr
-        ivRN5e3HONmZj8DgNLWI/qiuUJHsxKHfKm9/6vYNBQzKc5W3GMbJ3gikC/b+AN7+jJO9ixEwGE2d8vtZ
-        1aWmzl/gWoIYlDPKWwh16/rNPB+v/q28favT3xUwCCuUtwjqZu/um8FO5e1f3d6kgN5r4sSff6onqQxs
-        Px5Q3n7WiSsHYRBOK28B1OlTKpMdytvPOvEwAL3XxI//9t0/+td+l2OXLm/ircrs6wP01teUd+DXaavK
-        6BPK2986ccEQ9NrflHfg1+nFKiO75p+3v3XiYQB6q4kf/7NfV+8XytvvOtlLj4HesRe+eAd8nbaozLYp
-        b7/rZG+ACvTOX5R3wNcp64//FzVxSfPjCugVu+afd7DXyd4mrAS/Ut7+1+mpCuiNJh7/b1IlsIcp3v7X
-        iecB0Cu2eL0DvU7Zf/y/6EXK2/86rVdAb9ymvAO9avba+5LYNQq8+1G17yqgNw4r70Cv2ndUSWx/vftR
-        Nft6Ab1wlfIO8jp9TJXkRuXdjzrNfPsyoEivVt4BXqfrVUmWKu9+1GmRAoq3VnkHeJ2eokpi++vdjzrd
-        oIDiTXrxT3v77hIdVd79qdotCiienb/vHeBV26NK9APl3Z+qHVJA8SY9BdgutlGiSS8SwinBKN6jlHdw
-        1+ntqkR2Np93f+r0aAUUy66a6x3YdbpOlcj227s/deJXgSja1co7sOtkbx9eovnKuz91epYCivUy5R3Y
-        dbLr7ZXoSuXdnzrZ1w8oVhNvn/VIVSLbb+/+1KnttzsHWvUW5R3YVbtflWzSS6CX+gQoMO39yjuwq3af
-        KtmkJwPZ1w8o1hrlHdhV+70q2e+Ud7+qtkoBxbJr+HsHdtXuViW7U3n3q2pZ3v8QGMsXlHdgV+17qmST
-        ng5sXz+gWJMOgFtVyb6tvPtVNbuUOlCsm5R3YFftDlWySX8C+LQCUlqo7Aq4s3WP8g7sqtmz6N7tltKk
-        vwW4V3m3e2n27wCEsoPOO2CpmxgCCGXfebwDkbrJ/j2AMAyAXDEAEIoBkCsGAEIxAHLFAEAoBkCuGAAI
-        xQDIFQMAoRgAuWIAIBQDIFcMAIRiAOSKAYBQDIBcMQAQigGQKwYAQhU3AObOnTu1YsWKqW3btk3t3bt3
-        6vjx41MXLlyYOnHixPSf7e/t/8+bN8/9/OQxABCqqAGwfv36qbNnz05Vce7cuamNGze6t5M4BgBCFTEA
-        Fi9ePLV///7R0q7nwIED05/v3W7CGAAIlX4AbNmyZbSUJ7N161b39pPFAECo1ANg9erVo+XbjDVr1rjb
-        SRQDAKHSDoBFixaNlm2z7Ha97SWJAYBQaQfAwYMHR0u2WYcOHXK3lyQGAEKlHAA7duwYLdd27Ny5091u
-        ghgACJVyAJw6dWq0VNtx+vRpd7sJYgAgVLoBsGzZstEybZdtx9t+xzEAECrdALCTdyIkPUmIAYBQ6QbA
-        7t27R0u0XbYdb/sdxwBAqHQD4PDhw6Ml2q4jR4642+84BgBCpRsAx44dGy3Rdh09etTdfscxABAq3QCw
-        78wR7CcNb/sdxwBAqHQDIOo5gD179rjb7zgGAEKlGwAbNmwYLdF2bdq0yd1+xzEAECrdAFi6dOloibZr
-        +fLl7vY7jgGAUOkGgHXmzJnRMm3HyZMn3e0miAGAUCkHgJ2r36bt27e7200QAwChUg4Ay1611wZ7laG3
-        vSQxABAq7QCwy3i1gesBAP+TdgBYa9euHS3bZqxatcrdTqIYAAiVegBYdi2/JmzevNm9/WQxABAq/QCw
-        lixZMn1133HY1YS5KjDgK2IAXKzuFYLXrVvn3k7iGAAIVdQAsM6fPz9a3rOzj/M+P3kMAIRiAOSKAYBQ
-        DIBcMQAQigGQKwYAQjEAcsUAQCgGQK4YAAjFAMgVAwChGAC5YgAgFAMgVwwAhGIA5IoBgFAMgFwxABCK
-        AZArBgBCMQByxQBAKAZArhgACMUAyBUDAKGKGwD79u0bLfHZ2cd5n588BgBCFTcAVq5cOVris7OP8z4/
-        eQwAhCpuAFj2vn6zSfq+f1ViACBUkQPA2rVr12i5P5j9vffxhcQAQKhiB4C1YMGC6R/17crB9l/7s/dx
-        BcUAQKiiB0APYwAgFAMgVwwAhGIA5IoBgFAMgFwxABCKAZArBgBCMQByxQBAKAZArhgACMUAyBUDAKEY
-        ALliACAUAyBXDACEYgDkigGAUAyAXDEAEIoBkCsGAEIxAHLFAEAoBkCuGAAIxQDIFQMAoRgAuWIAIBQD
-        IFcMAIRiAOSKAYBQDIBcMQAQigGQKwYAQjEAcsUAQCgGQK4YAAjFAMgVAwChFirvQKRusn8PIJQddPad
-        p4vuVt5C6CrbH28/I2LxY3DswPcWYlfZ/gAIwgAABowBAAwYAwAYMAYAMGAMAGDAGADAgDEAgAFjAAAD
-        xgAABowBAAwYAwAYMAYAMGAMAGDAGADAgDEAgAFjAAADxgAABowBACT3CmULo41mXhPw/Iw/R9fWNQHX
-        KKA4L1XeQqH6/VQBRbHvXN7BTON1hQKKwU8AzXVSAcV5ozqhvIOa/r8HnL87puzrCBTpGeoeNfPApsv3
-        M2VfP6B4tyjvICc/+3oBvbJOeQc7PTj7OgG99AbF8wJ+f1L29QF6bb6yx7feIhhqP1dPU8Bg8LzAf+Px
-        Pgbro8pbFEPJ7j8waMvVn5W3QPqa3d+lCoDY4197HOwtlr5l99OeBwEwQ9+fF/i6AjCLG5W3eEpvrQJQ
-        gT0+7svzAnY/7HkOADXYefClPy/A+fzAhO5S3uLK3s0KQAO+pbxFljV7HgNAg+w8+fuVt+CyxPn8QIuu
-        Vvcqb/F1nV33wPYPQMvs8bW3CLuK3+8DwbK8joDz+YGOdHndweOK6/UBHeviuoP2PAS/3wcSscfh3mJt
-        Ol6/DyTV9nUHuV4fkJw9LrfH594CHjd+vw8UpMnrDtrrEZ6uABRm0usL8HgfKNy45wvw+32gJ+pcd9De
-        jHOZAtAjVa47yON9oOce6nkBHu8DAzHzuoM3KAADco16p7p2+k8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAgIcyZ85/ALlnh//hPZ0xAAAAAElFTkSuQmCC
+        IgAALiIBquLdkgAADI5JREFUeF7t3U2PHFcVxnF/gazZgzTKIomCAllAIJsIWcJIkGUERGJhJ1kQ+ARZ
+        ASsEWQQkkEx42SDxlggIQoSAxHtYRZHFeOwZ28RveKa7p2ccywtrOE+fOyg4HY+n657uc6v/P+mqMvZM
+        9e3Oc07Vre4pHwEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhNvb21ux8dw7xkr5KwB9
+        cXuhb21tvbC+vv7KeDwe2df/o6/tz3+5ubn5LfuSxgC0SkWr4r106dKPRqPRVfvvmQ2Hw7euXbv2HftP
+        mgGQmQpUhToYDFZtW52dPZy2DY0AyEQFqcK0wl+zbbjSYGgEwCKpAFWIVpCnbDt3NAJgQVR0tj7/qwpx
+        0awR/NM2NAFgHlRso9Ho0qT6krBmdNk2nA0AUVRcKrK3jW2zOmmDJgDUpKIqxdUCmgBQi4qpFFVLaAJA
+        VyoiO+P/xaSkGrO7u/uybWgCwCxUPKPR6M+TamrU9vb2a7ahCQCHoaK5devW9ydV1Dh7Hj+0DU0AuFtW
+        MHpLrU+eK08NwJ1YsayMx+Mtr5t+sKXMf2zDWQBwJyqS4XD4j0nV9MxgMPi7bWgCwDQqDhutvd13WLw9
+        CExjhRG+7t/Z2RlvbGy8ZGcZz9uXerzJsFP0b+iGILffKCQI1wOAd7KiCF337+7ujm1z4Gf19ff6PmsU
+        O7YNsb29refJWQAgKgart1cm1RHj0Kfd+n4bL+qHI/D5AKCwQgg59S+n8wce9d+Lfk4/b/sZ2jYCSwEs
+        NyuCFTsa/tHroR5b4//bNlWOsNqP7e/8ZMcVjUajP9mGswAsLyuA6kf/wWDwpm2qFpb2Z/t9Y/IAdXEW
+        gOVk4a9+Vx8r0n/ZJuSoqv3a/qvefszOAv5iG84CsHws+FWP/rvGNqHFpP2XdxRq4iwAy8VCH3FPv7kU
+        kh7HH64Oex30yUfOArA8LPBVi+jGjRs/tc1cikiPY4/3s8kD18NZAJaDhb3q7/nbuly3557rEVSPVx63
+        Ct4RwNKwoNe+8r+Qo6ce1x++Gs4C0H8Kuue9u52dnV/bZiFHTj3u9evXfzWZSB00APSbhbz2h2oWWjR6
+        fJ9Gd+V1YRmA/rKA1zz66/cHFlowevzKv8fAWQD6SwH3nFeRolg0D59OFTQA9JOFu9rp/zzf9juI5lHr
+        1uUsA9BbFuzeHik1H59WFZwFoH8UbM93N4OE/xqv5mPz0j3/aqABoF8s1DWv/qcsEM3Lp9cNywD0jgW6
+        96fImpdPrwrOAtAfCrTnupuMp//7NC87ete6pTkNAP2xubn57RLsrlIXhubn0+zm6tWr3y27BNpmee79
+        +n+f5ufT7IbrAOgNC3LvT//3aX42z9cnE+6OZQDapyB7njtroiA0T59uZzQAtE9B9jx3RgMAWrO1tfVC
+        CfTM3ja2aWJNrHleN5OJdzAcDp8vuwTadfbs2d+UTM/szJkzvy+7a8La2lrnf+vAnvNvy+6ANlmOdRdd
+        3a23k9beFtN8y9RnZicR4Xc5BkJZgJdyPaz5+rQ74zoA2qUAe447owEArVGAPced0QCA1ty8efOrJcgz
+        Gw6Hb9mmqbWw5lvj0483btz4Wtkl0J4abwFubGy8VHbXFM27PIWZ8VYgmnb58uUXS5ZndvHixR+U3TXl
+        ypUr3ytPYWatPndgwo6CL5csz2w0Gn2z7K4pOnqXpzAzvX5ld0B71tbWXi1ZntnNmze/UnbXFM27PIWZ
+        8WEgNO306dP69++7avJKuObt05+dvX5/K7sD2rO6uvpmyXIXS9sA9PqV3QFtsfzqX83Z8Sh3srQNwF6+
+        sW34ODDaY8Fd6g/DaN4+/c74MBDao+B6fjujAQCtUXA9v53RAIBsLJgrCucdxkkbNWg/0/affczr+XON
+        APOl0A0Gg1O2xYKV/w80AcyHwkbx50ITwNxY0HTaiXy4VoB4CprnDcnQABBPQfO8IRkaAOIpaJ43JEMD
+        QDwFzfOGZGgAiKeged6QDA0A8RQ0zxuSoQEgnoLmeUMyNADEU9A8b0iGBoB4CprnDcnQABBPQfO8IRka
+        AOIpaJ63tqyvr+998fjxvU89/PDeJ+69911Df66/1/c1igaAeAqa560NKugnjx3be9899+xp+gcNfd+T
+        xz7ZYiOgASCeguZ5y00F/OyJE3dd+LcP/Zx+vqFGQANAPAXN85aXivajDzwwtbAPOz5y//2tNAEaAOIp
+        aJ63nFSsjz700NRinnVofw00ARoA4ilonrecvvz001OLuOvQfpOjASCeguZ5y0dH6VnX/AcN7Tf5WQAN
+        APEUNM9bPp8/enRq8dYa2n9iNADEU9A8b7lEHv33R/KzABoA4ilonrdcnn3qqalFW3vocZKiASCeguZ5
+        y+XxRz8+tWBrDz1OUjQAxFPQPG+5HL3vvqkFW3vocZKiASCeguZ5y0Wf59f0ooceJykaAOIpaJ63XGgA
+        NADMgYLmecuFBkADwBwoaJ63XLgGQAPAHChonrdcPsO7ADQAxFPQPG+5fOmZZ6YWbO3B5wCw1BQ0z1su
+        fBKQBoA5UNA8b/lE/y7A5/hdACw7Bc3zlk/kWUDyo7/QABBPQfO85aTbeGmatQf3AwCMguZ5y0lH6ep3
+        BPrwh7If/YUGgHgKmuctLxWr7uWn6XYdurdgA8UvNADEU9A8b7mpaJ89cXzmawL6Oe4KDNxGQfO8tUEF
+        fNg7BD/y4IMtFf4+GgDiKWiet3aomO/2TKCBq/3vhQaAeAqa560td/vLQol/2ecgNADEU9A8b22hAQAV
+        KGiet7bQAIAKFDTPW1toAEAFCprnrS00AKACBc3z1hYaAFCBguZ5awsNAKhAQfO8tYUGAFSgoHne2kID
+        ACpQ0DxvbaEBABUoaJ63ttAAgAoUNM9bW2gAQAUKmuetLTQAoAIFzfPWFhoAUIGC5nlrCw0AqEBB87y1
+        5QuPPz614G8f+r5G0QAQT0HzvLVFN/n44AfeP7Xo94f+vtGbgQgNAPEUNM9be1Tcn33ssXfdHUhf688b
+        Ln6hASCeguZ5a5cK/cQTT+x9+mOPTLaNF/4+GgDiKWieNyRDA0A8Bc3zhmRoAIinoHnekAwNAPEUNM8b
+        kqEBIJ6C5nlDMjQAxFPQPG9IhgaAeAqa5w3J0AAQT0HzvCEZGgDiKWieNyRDA0A8Bc3zhmRoAIinoHne
+        kAwNAPEUNM8bkqEBIJ6C5nlDMjQAxFPQPG9IhgaAeAqa5w3J0AAQT0HzvCEZGgDiKWieNyRDA0A8Bc3z
+        hmRoAIinoHnekAwNAPEUNM8bkqEBIJ6C5nlDMjQAxFPQPG9IhgaAeAqa5w3J0AAQT0HzvCEZGgDiWdBW
+        BoPBKc8cMij/P1bK/yIglsJGE8iB4sdCKHQ2tByY9zhpIyPNa9p8owfFj+VRQp8Ra3AgmgrN6y0dGgAQ
+        TYXm9ZYODQCIpkLzekuHBgBEU6F5vaVDAwCiqdC83tKhAQDRVGheb+nQAIBoKjSvt3RoAEA0FZrXWzo0
+        ACCaCs3rLR0aABBNheb1lg4NAIimQvN6S4cGAERToXm9pUMDAKKp0Lze0qEBANFUaF5v6dAAgGgqNK+3
+        dGgAQDQVmtdbOjQAYJ8VRNQdg5bpjkDc7QftUXAHg8EbtkUHO8Y2NAK05dy5cz+fJBi1sLxAO1ZXV0+X
+        4KKC8Xj89fLSAvlxBlAdZwBohwV2ZTgcnvfsoovyOnINAG1RaLe3t1+bpBgzKa8fxY82Kbw2sr5tl51e
+        N4ofbVOIbTx33SjVuLPyOvHWH/pFgR4MBhsKOaYrrw+Fj35SuLkuMN14PP6dbSh+9JtCboPrAv+P9T6W
+        h8JuY+mvC7Dex1JT8Jf1uoA973XbUPhYbiqCsv5dGry/D7yDisHGslwXYL0P3E5FYaO31wV2jW1Y7wN3
+        ogIp6+Pe4P194BBULH35vADrfWAGKhobrV8XYL0PzErFU4qoKby/D1SiIlIxtfJ5Adb7QAAVla2n/zCp
+        sqTK/Ch+IIKKy0bWJQHrfSCaisxGms8LsN4HFkAFt+j7DnK/PmCBVHyL+rwA7+8DCagIbcz7ugDrfSAL
+        FaON8OsCrPeBxFSYUdcFeH8faICKtPZ1Advfq7ah+IEWqFht1LouwHofaI2K1sbM1wVY7wM9oAI+7O8R
+        2Pdzvz6gL1TMd3vfQdb7QA+pqG0cdF2A9T7QVypuG++6LmBfcr8+YFmo0C9cuPDj1dXV18+fP/8TCh8A
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA7ujIkf8CMFhLOK9qPdkAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
