--- a/Lockdown/Properties/Resources.resx
+++ b/Lockdown/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="TestLogo_Cheeseman (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\TestLogo_Cheeseman (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Lock Down Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\Lock Down Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Lock Down Arrow cropped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\Lock Down Arrow cropped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
